<resources>
    <string name="app_name">Airline Ticket Reservation System</string>
    <string name="populate_data">Populate data into Tables</string>
    <string name="retrieve_data">Retrieve data from tables</string>
    <string name="welcome_txt">Hi!!!!\nWhat would you like to do ?</string>
    <string name="select_table_heading">Select Table you want to populate data into</string>
    <string name="table_name_flight">Flight</string>
    <string name="table_name_reservation">Reference</string>
    <string name="table_name_ticket">Ticket</string>
    <string name="table_name_passenger">Passenger</string>
    <string name="enter_flight_data">Please Enter the Flight Data</string>
    <string name="flight_number">Flight Number</string>
    <string name="aircraft">Aircraft</string>
    <string name="destination">Destination</string>
    <string name="airline">Airline</string>
    <string name="flight_time">Flight Time</string>
    <string name="retrieve_data_head">Retrieve Data</string>
    <string name="populate_data_head">Add Data</string>
    <string name="add_reservation_head">Add Reservation Info</string>
    <string name="add_passenger_head">Add Passenger Info</string>
    <string name="add_ticket_head">Add Ticket Info</string>
    <string name="add_flight_head">Add Flight Info</string>
    <string name="submit_data">Submit Data</string>
    <string name="error_msg">Oops!!! Something went wrong!!!</string>
    <string name="success_msg">Data saved into table successfully!!!</string>
    <string name="empty_error_txt">This can\'t be empty</string>
    <string name="aircraft_type">Aircraft type</string>
    <string name="airline_code">Airline Code</string>
    <string name="flight_source">Flight source</string>
    <string name="ref_no">Reference number</string>
    <string name="enter_ticket_data">Please Enter the Ticket Data</string>
    <string name="ticket_number">Ticket number</string>
    <string name="ticket_type">Ticket type</string>
    <string name="price">Ticket price</string>
    <string name="ticket_status">Ticket status</string>
    <string name="enter_reference_data">Please Enter the Reference Data</string>
    <string name="phone">Phone number</string>
    <string name="passenger_id">Passenger Id</string>
    <string name="passenger_name">Passenger Name</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="province">State/Province</string>
    <string name="country">Country</string>
    <string name="email">Email</string>
    <string name="dob">Date of birth</string>
    <string name="enter_passenger_data">Please Enter the Passenger Data</string>
</resources>